--- a/focl.toml
+++ b/focl.toml
@@ -10,6 +10,8 @@ log_level = "info"
 name = "peer-1"
 address = "198.51.100.2"
 remote_as = 65002
+remote_port = 179
+local_address = "0.0.0.0:0"
 
 [[prefixes]]
 network = "203.0.113.0/24"
