feat: prepare v0.1.0 release with MD5 auth, IPv6 support, and CI
Add TCP-MD5 authentication support (Linux only):
- New bgp/auth.rs module implementing RFC 2385
- Peer password configuration option
- Extension traits for tokio sockets

Add IPv6 support:
- IpNet-based prefix handling for v4/v6
- Configurable next-hop per prefix
- Updated validation for both address families

Add GitHub Actions workflows:
- rust.yml: CI for formatting, clippy, build, test
- release.yml: Automated releases on version tags
- Multi-platform binary uploads (Linux x64/ARM64, macOS)
- Automated crates.io publishing

Documentation and release preparation:
- Comprehensive README with architecture and examples
- CHANGELOG.md following Keep a Changelog format
- LICENSE file with MIT license
- focl-vultr-example.toml with documentation IPs
- Interop test configs for MD5 authentication
- Merge DESIGN.md content into README
- Add experimental warnings throughout docs
- Update Cargo.toml with crates.io metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,15 @@
 [package]
 name = "focl"
 version = "0.1.0"
+authors = ["Mingwei Zhang <mingwei@bgpkit.com>"]
 edition = "2021"
 license = "MIT"
-description = "focl/focld - lightweight Rust BGP speaker tooling"
+description = "focl/focld - lightweight Rust BGP speaker"
+repository = "https://github.com/bgpkit/focl"
+documentation = "https://docs.rs/focl"
+readme = "README.md"
+keywords = ["bgp", "bgpkit", "routing", "networking"]
+categories = ["network-programming"]
 
 [lib]
 name = "focl"
